--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"http://desmond-tam.github.io/mask-portal",
+  "homepage": "http://desmond-tam.github.io/mask-portal",
   "name": "mask-portal",
   "version": "0.1.0",
   "private": true,
@@ -11,7 +11,6 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/bootstrap": "^5.2.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.11.45",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@types/react-google-recaptcha": "^2.1.5",
@@ -26,13 +25,18 @@
     "rxjs": "^7.5.6",
     "state-pool": "^0.7.1",
     "typescript": "^4.7.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "replace-in-file": "6.3.5",
+    "moment-timezone":"^0.5.37",
+    "jquery":"^3.6.1",
+    "simple-notify":"^0.5.5"
   },
   "scripts": {
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "deploy": "npm run build & gh-pages -d build",
+    "start": "set REACT_APP_ENV=local & react-scripts start",
+    "timestamp": "node scripts/timestamp.js",
+    "build:dev":"set REACT_APP_ENV=development & react-scripts build && npm run timestamp",
+    "build": "set REACT_APP_ENV=production & react-scripts build && npm run timestamp",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "ssl": "set HTTPS=true&&npm start"
@@ -57,6 +61,7 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/jquery":"^3.5.14",
     "gh-pages": "^4.0.0",
     "sass": "^1.54.0"
   }
