--- a/package.json
+++ b/package.json
@@ -16,26 +16,26 @@
     "@types/react-google-recaptcha": "^2.1.5",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
+    "jquery": "^3.6.1",
     "mdb-react-ui-kit": "^4.1.0",
+    "moment-timezone": "^0.5.37",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^2.1.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.8",
+    "replace-in-file": "6.3.5",
     "rxjs": "^7.5.6",
     "state-pool": "^0.7.1",
     "typescript": "^4.7.4",
-    "web-vitals": "^2.1.4",
-    "replace-in-file": "6.3.5",
-    "moment-timezone":"^0.5.37",
-    "jquery":"^3.6.1",
-    "simple-notify":"^0.5.5"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "deploy": "npm run build & gh-pages -d build",
     "start": "set REACT_APP_ENV=local & react-scripts start",
     "timestamp": "node scripts/timestamp.js",
-    "build:dev":"set REACT_APP_ENV=development & react-scripts build && npm run timestamp",
+    "build:dev": "set REACT_APP_ENV=development & react-scripts build && npm run timestamp",
     "build": "set REACT_APP_ENV=production & react-scripts build && npm run timestamp",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -61,7 +61,7 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
-    "@types/jquery":"^3.5.14",
+    "@types/jquery": "^3.5.14",
     "gh-pages": "^4.0.0",
     "sass": "^1.54.0"
   }
