--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "deploy": "npm run build & gh-pages -d build",
     "start": "set REACT_APP_ENV=local & react-scripts start",
     "timestamp": "node scripts/timestamp.js",
-    "build:dev": "set REACT_APP_ENV=development & react-scripts build && npm run timestamp",
+    "build-dev": "set REACT_APP_ENV=development & react-scripts build && npm run timestamp",
     "build": "set REACT_APP_ENV=production & react-scripts build && npm run timestamp",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
